# car-media-manager

./: .env.example  .gitignore  README.md  pyproject.toml
car_media_manager/: cameras.py  db.py  gio.py  ingest.py  main.py  mtp.py  settings.py  speed.py  upload.py  web.py
car_media_manager/cameras/: base.py  dji.py  gopro.py
car_media_manager/cameras/dji_ble/: client.py  crc.py  pairing_store.py  protocol.py
car_media_manager/templates/: dashboard.html
deploy/: car-media-manager.service  install-service.sh
