[project]
name = "car-media-manager"
version = "0.1.0"
description = "Auto-sync car camera footage to cloud storage"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "aiobotocore>=2.13.0",
    "httpx>=0.27.0",
    "databases[aiosqlite]>=0.9.0",
    "bleak>=0.22.0",
]

[project.scripts]
cmm = "car_media_manager.main:main"

[dependency-groups]
dev = [
    "types-aiobotocore[s3]>=2.13.0",
]
